[package]
name = "bevy_iced"
version = "0.4.0"
edition = "2021"
description = "Iced integration for Bevy"
authors = ["tasgon <me@tas.sh>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "iced", "ui", "game", "gui"]
homepage = "https://github.com/tasgon/bevy_iced"
repository = "https://github.com/tasgon/bevy_iced"
documentation = "https://docs.rs/bevy_iced"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: temp using "main" branch until a release with wgpu version matching iced
# bevy_app = "0.12"
# bevy_derive = "0.12"
# bevy_ecs = "0.12"
# bevy_input = "0.12"
# bevy_math = "0.12"
# bevy_render = "0.12"
# bevy_utils = "0.12"
# bevy_window = "0.12"
bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_derive = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_input = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_render = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_utils = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_window = { git = "https://github.com/bevyengine/bevy", branch = "main" }

# NOTE: temp using "master" branch until a release with wgpu version matching bevy
# iced_core = "0.10"
# iced_runtime = "0.1"
# iced_wgpu = "0.11"
# iced_widget = "0.1"
# iced_renderer = { version = "0.1", features = ["wgpu"] }
iced_core = { git = "https://github.com/iced-rs/iced/", branch = "master" }
iced_runtime = { git = "https://github.com/iced-rs/iced/", branch = "master" }
iced_wgpu = { git = "https://github.com/iced-rs/iced/", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced/", branch = "master" }
iced_renderer = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["wgpu"]}

[dev-dependencies]
# bevy = "0.12"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
rand = "0.8"