[package]
name = "bevy_iced"
version = "0.4.0"
edition = "2021"
description = "Iced integration for Bevy"
authors = ["tasgon <me@tas.sh>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "iced", "ui", "game", "gui"]
homepage = "https://github.com/tasgon/bevy_iced"
repository = "https://github.com/tasgon/bevy_iced"
documentation = "https://docs.rs/bevy_iced"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.13"
bevy_derive = "0.13"
bevy_ecs = "0.13"
bevy_input = "0.13"
bevy_math = "0.13"
bevy_render = "0.13"
bevy_utils = "0.13"
bevy_window = "0.13"

iced_core = "0.12"
iced_runtime = "0.12"
iced_wgpu = "0.12"
iced_widget = "0.12"
iced_renderer = { version = "0.12", features = ["wgpu"] }

[dev-dependencies]
bevy = "0.13"
rand = "0.8"